data updated, refactoring on acceptance test timeouts